--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,9 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: gainsboro;
-}
-
-h1 {
+#main-title {
   text-align: center;
+  font-size: 10px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-h2 {
-  color: rebeccapurple;
-  text-align: center;
-}
-
-table {
-  border: 2px solid darkorchid;
-  width: 650px;
-  margin: 0 auto;
-}
-
-thead {
-  background-color: plum;
-}
-
-td {
-  border-top: 1px solid darkorchid;
-}
-
-.code {
-  font-family: monospace;
-  background-color: beige;
+.navigation ul {
+  display: inline-flex;
 }
