--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,20 @@
 #main-title {
   text-align: center;
-  font-size: 10px;
+  font-size: 35px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.navigation {
+  display: grid;
 }
 
 .navigation ul {
   display: inline-flex;
+  margin: 0 auto;
+  max-width: 200%;
+  text-align: center;
 }
