--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 #main-title {
   text-align: center;
-  font-size: 35px;
+  font-size: 25px;
+  background-color: lightblue;
+  color: darkblue;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -8,11 +10,11 @@
   box-sizing: border-box;
 }
 
-li {
-  border: solid;
-  display: inline-block;
+.navigation {
   text-align: center;
-  width: 850px;
+  margin: 0% auto;
+  padding: 0 0 0 0;
+  font-size: 10px;
 }
 
 .header {
